//玩家背包数据
syntax = "proto3";
import "PbCom.proto";
package PbBag;


//收到背包列表
message SC_bag_list
{
	repeated One_bag_prop PropList = 1;	//道具列有
	repeated PbCom.One_bag_equip EquipList = 2; //装备列表	
	repeated PbCom.One_bag_Gem GemList = 3;     //宝石列表
}


//获得多个物品,可能是虚拟物品,也可能是装备,道具(客户端要把同Id的道具数量相加)
//虚拟物品需要把值加到原值上
message SC_bag_newItems
{
	PbCom.Enum_bag_itemsType ItemsType = 1;
	repeated One_bag_item Items = 2;
}

//更新单个物品,道具或装备数量
message SC_bag_updateItemCount
{
	int32 ItemSID = 1;		//装备短Id  道具为0
	int32 TemplID =2;		//模板Id
	int32 Num = 3;			//数量 (更新为更新后的数量 0客户端要移除物品)
}


//一个物品(装备，道具，虚拟物品)
message One_bag_item
{
	int32 SID = 1;          //装备sid （道具和英雄都为0）
	int32 TemplID =2;		//模板Id
	int32 Num = 3;			//数量   装备Num为0 
	int32 Level = 4;		//装备等级
	int32 Exp = 5;			//经验（英雄以外为 0）
	int32 BreakLv = 6;      //品阶等级（道具为 0）
	int32 index = 7;        //位置（默认 0）
	bool IsGetHero = 8;    //是否获得英雄
	int32 HeroExp = 9;      //英雄经验
	int32 VedioNum = 10;    //英雄广告数
}


//道具,材料或碎片
message One_bag_prop
{
	int32 TemplID =1;	//模板Id
	int32 Num = 2;		//数量
}

//请求使用物品
message CS_bag_useItem
{
	int32 TemplID =1;		//物品模板Id
	int32 Num = 2;			//使用数量
}
//收到使用物品
message SC_bag_useItem
{
	int32 TemplID =1;		//物品模板Id
	int32 Num = 2;			//使用数量
}


//请求出售道具
message CS_bag_sellProp
{
	int32 TemplID =1;		//道具模板Id
	int32 Num = 2;			//出售数量
}

//请求出售装备
message CS_bag_sellEquip
{
	int32 SID =1;			//装备为SID
}
//收到出售装备
message SC_bag_sellEquip
{
	int32 SID =1;			//装备为SID
}

//请求更换马主装备
message CS_bag_changeEquip
{
	int32 EquipSID = 1;				//装备SID 穿戴或卸下的装备Id
	bool IsUse = 2;					//true穿戴装备  /false 卸下装备
}

//收到更换马主装备
message SC_bag_changeEquip
{
	int32 EquipSID = 1;				//装备SID 穿戴或卸下的装备Id (原位置的装备自行处理)
	bool IsUse = 2;					//true穿戴装备  /false 卸下装备
}

//收到使用平安符
message SC_bag_Amulet
{
	int32 AmuletTime = 1;			//平安符到期时间
}

